--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <td style="padding:20px 0;">
           <![endif]-->
           <div class="outer" style="width:96%;max-width:660px;margin:20px auto;">
-            
+
             <table role="presentation" style="width:100%;border:0;border-spacing:0;">
               <tr>
                 <td style="padding:10px 10px 20px 10px;font-family:Arial,sans-serif;font-size:24px;line-height:28px;font-weight:bold;">
@@ -84,6 +84,37 @@
             </table>
 
             <div class="spacer" style="line-height:26px;height:26px;mso-line-height-rule:exactly;">&nbsp;</div>
+
+            <div class="two-col" style="text-align:center;font-size:0;">
+              <!--[if mso]>
+              <table role="presentation" width="100%">
+              <tr>
+              <td style="width:33.33333%;padding:10px;" valign="middle">
+              <![endif]-->
+              <div class="column" style="width:100%;max-width:240px;display:inline-block;vertical-align:middle;">
+                <div style="padding:10px;">
+                  <p style="margin:0;font-family:Arial,sans-serif;font-size:14px;line-height:18px;">
+                    <img src="images/two-column-01.png" width="240" alt="" style="display:block;width:240px;max-width:100%;height:auto;" />
+                  </p>
+                </div>
+              </div>
+              <!--[if mso]>
+              </td>
+              <td style="width:66.66667%;padding:10px;" valign="middle">
+              <![endif]-->
+              <div class="column" style="width:100%;max-width:440px;display:inline-block;vertical-align:middle;">
+                <div style="padding:10px;font-size:14px;line-height:18px;text-align:left;">
+                  <p style="margin-top:0;margin-bottom:12px;font-family:Arial,sans-serif;font-weight:bold;">Taciti nostra, per litora nostra</p>
+                  <p style="margin-top:0;margin-bottom:14px;font-family:Arial,sans-serif;">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas sed ante pellentesque.</p>
+                  <p style="margin:0;font-family:Arial,sans-serif;"><a href="https://example.com/" style="background: #ffffff; border: 2px solid #8dc1d6; text-decoration: none; padding: 10px 25px; color: #000000; border-radius: 4px; display:inline-block; mso-padding-alt:0;text-underline-color:#ffffff"><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%;mso-text-raise:20pt">&nbsp;</i><![endif]--><span style="mso-text-raise:10pt;font-weight:bold;">Claim yours now</span><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%">&nbsp;</i><![endif]--></a></p>
+                </div>
+              </div>
+              <!--[if mso]>
+              </td>
+              </tr>
+              </table>
+              <![endif]-->
+            </div>
 
             <div class="two-col" style="text-align:center;font-size:0;">
               <!--[if mso]>
